--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
     "**/.client/**/*.tsx"
-  ],
+, "app/entry.client.jsx", "app/entry.server.jsx", "app/root.jsx", "app/routes/_index.jsx", "vite.config.js"  ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "types": ["@remix-run/node", "vite/client"],
